config env variables

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
-BROWSERBASE_API_KEY=bb_live_XXXXX_XXXXXXXXXXXXX
-BROWSERBASE_PROJECT_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+# Browserbase credentials
+BROWSERBASE_API_KEY=your_api_key_here
+BROWSERBASE_PROJECT_ID=your_project_id_here
+
+# Application configuration
+BASE_DOMAIN=https://posthog-demo-3000.fly.dev/
+
+# Optional: Override timezone (defaults to America/Los_Angeles)
+# TZ=America/New_York
+
 NODE_PORT=3000
