--- a/fly.toml
+++ b/fly.toml
@@ -3,55 +3,39 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'hogflix-sessions-service-snowy-cloud-6788'
-primary_region = 'lax'
+app = "posthog-demo-sessionhog"
+primary_region = "lax"
 
 [build]
-  dockerfile = 'Dockerfile'
-
-[deploy]
-  strategy = 'immediate'
+  dockerfile = "Dockerfile"
 
 [env]
-  NODE_ENV = 'production'
-  TZ = 'America/Los_Angeles'
+  PORT = "3000"
+  NODE_ENV = "production"
+  TZ = "America/Los_Angeles"
 
-[processes]
-  app = 'node app/sessions_server.js'
-
-[experimental]
-  cmd = ["node", "app/sessions_server.js"]
-  entrypoint = ["sh", "-c"]
-
-[[services]]
-  protocol = 'tcp'
+[http_service]
   internal_port = 3000
-  auto_stop_machines = 'stop'
+  force_https = true
+  auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 0
-  ports = []
-  processes = ['app']
+  min_machines_running = 1
+  processes = ["app"]
 
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-    force_https = true
+[[http_service.ports]]
+  port = 80
+  handlers = ["http"]
 
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
+[[http_service.ports]]
+  port = 443
+  handlers = ["tls", "http"]
 
-  [services.concurrency]
-    type = "connections"
-    hard_limit = 25
-    soft_limit = 20
-
-  [[services.tcp_checks]]
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "1s"
+[http_service.concurrency]
+  type = "connections"
+  hard_limit = 1000
+  soft_limit = 800
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
+  cpu_kind = "shared"
   cpus = 1
+  memory_mb = 1024
