--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
-# Browserbase credentials
-BROWSERBASE_API_KEY=your_api_key_here
-BROWSERBASE_PROJECT_ID=your_project_id_here
-
-# Application configuration
+# Required environment variables
+BROWSERBASE_API_KEY=your_browserbase_api_key_here
+BROWSERBASE_PROJECT_ID=your_browserbase_project_id_here
 BASE_DOMAIN=https://posthog-demo-3000.fly.dev/
 
+# API key for securing endpoints (required)
+API_KEY=your_secure_api_key_here
+
 # Optional: Override timezone (defaults to America/Los_Angeles)
-# TZ=America/New_York
+# TZ=America/Los_Angeles
 
 NODE_PORT=3000
