--- a/fly.toml
+++ b/fly.toml
@@ -1,41 +1,22 @@
-# fly.toml app configuration file generated for hogflix-sessions-service-snowy-cloud-6788 on 2025-01-23T13:36:41-06:00
+# fly.toml app configuration file generated for posthog-demo-sessionhog on 2025-03-30T21:51:30Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "posthog-demo-sessionhog"
-primary_region = "lax"
+app = 'posthog-demo-sessionhog'
+primary_region = 'sjc'
 
-[env]
-  PORT = "3000"
-  NODE_ENV = "production"
-  TZ = "America/Los_Angeles"
-
-[processes]
-  app = "node app/sessions_server.js"
+[build]
 
 [http_service]
-  internal_port = 3000
+  internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
-  processes = ["app"]
-
-[[http_service.ports]]
-  port = 80
-  handlers = ["http"]
-
-[[http_service.ports]]
-  port = 443
-  handlers = ["tls", "http"]
-
-[http_service.concurrency]
-  type = "connections"
-  hard_limit = 1000
-  soft_limit = 800
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-  cpu_kind = "shared"
+  cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
