--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "dev": "nodemon app/sessions_server.js"
   },
   "dependencies": {
-    "@browserbasehq/sdk": "^1.0.0",
-    "playwright-core": "^1.41.2",
-    "dotenv": "^16.4.4",
-    "express": "^4.18.2",
-    "node-cron": "^3.0.3"
+    "@browserbasehq/sdk": "^2.5.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "node-cron": "^3.0.3",
+    "playwright-core": "^1.51.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.1.9"
   }
 }
