--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "posthog-demo-sessionhog",
   "version": "1.0.0",
+  "description": "Session simulation for Hogflix demo app",
   "type": "module",
-  "description": "Session simulation service for PostHog demo",
   "main": "app/sessions_server.js",
   "scripts": {
     "start": "node app/sessions_server.js",
-    "dev": "nodemon app/sessions_server.js"
+    "dev": "nodemon app/sessions_server.js",
+    "cron": "node app/cron_service.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@browserbasehq/sdk": "^2.5.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "node-cron": "^3.0.3",
-    "playwright-core": "^1.51.1"
+    "@browserbasehq/sdk": "^0.0.7",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "playwright-core": "^1.42.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
