--- a/railway.toml
+++ b/railway.toml
@@ -1,13 +1,15 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "npm install"
+buildCommand = "pnpm install"
 
 [deploy]
-startCommand = "npm start"
+startCommand = "pnpm start"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
 [deploy.env]
-NODE_ENV = "production" 
+NODE_ENV = "production"
+
+engine-strict=true 
